# dxengine

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  DOCS.md  LICENSE  MEDICAL_DISCLAIMER.md  PROPOSAL.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: dx-adversarial.md  dx-diagnostician.md  dx-hypothesis.md  dx-intake.md  dx-lab-pattern.md  dx-literature.md  dx-preprocessor.md  dx-research-validator.md  dx-researcher.md
.claude/plans/: auto_discovery_expansion.md  scaling_fixes.md
.claude/skills/calibrate/: skill.md
.claude/skills/diagnose/: skill.md
.claude/skills/diagnose/references/: diagnostic-protocol.md  state-schema.md
.claude/skills/diagnose/scripts/: analyze_labs.py  (+11 more)
.claude/skills/eval/: skill.md
.claude/skills/evolve/: skill.md
.claude/skills/expand/: skill.md
.claude/skills/improve/: skill.md
data/: discovery_candidates.json  disease_lab_patterns.json  finding_rules.json  illness_scripts.json  lab_ranges.json  likelihood_ratios.json  loinc_mappings.json
docs/: EQUITY_AUDIT.md  MIMIC_SETUP.md  NHANES_VALIDATION.md  SAFETY_ARGUMENT.md
mcp_servers/: lab_reference_server.py  medical_kb_server.py  pubmed_server.py.bak
sandbox/tournament/: approach.py  benchmark.py  data_splitter.py  metrics.py  report.py  run_tournament.py  tournament.py
sandbox/tournament/approaches/: agent_template.py  current_chi2.py  gradient_boosting.py  logistic.py  multivariate_lr.py  oneclass_svm.py  pca_lda.py
sandbox/tournament/results/: latest.json
src/dxengine/: __init__.py  bayesian_updater.py  convergence.py  finding_mapper.py  hypothesis_verifier.py  info_gain.py  lab_analyzer.py  mimic_loader.py  models.py  pattern_cache.py  pattern_detector.py  pipeline.py  preprocessor.py  utils.py  verification_models.py  verifier.py
state/comparison/: claude_results.json
state/nhanes/: calibrate.py  nhanes_loader.py  validate_with_thyroid.py
tests/: conftest.py  test_bayesian_updater.py  test_convergence.py  test_finding_mapper.py  test_info_gain.py  test_lab_analyzer.py  test_models.py  test_pattern_detector.py  test_pipeline.py  test_preprocessor.py  test_verifier.py
tests/eval/: __init__.py  generate_vignettes.py  reporter.py  runner.py  schema.py  scorer.py  test_eval_suite.py  test_generate_vignettes.py
tests/eval/clinical/: __init__.py  run_clinical_eval.py  test_clinical_eval.py
tests/eval/comparison/: __init__.py  llm_runner.py  prompt.py  run_comparison.py  test_comparison.py
tests/eval/lab_accuracy/: cross_validator.py  matrix_generator.py  matrix_runner.py  reporter.py  run_lab_accuracy.py  schema.py  test_lab_accuracy.py
tests/fixtures/: cushings.json  dka.json  hemochromatosis.json  hypothyroid.json  iron_deficiency_anemia.json
(+581 files in other folders)
